// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render the embed header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <div
        className="qa-dashboard__embed-header"
      >
        <AngularWrapper
          bindings={
            Object {
              "closeAction": Object {
                "meta": Object {
                  "tracking": true,
                },
                "type": "ui/HIDE_EMBED_PREVIEW",
              },
            }
          }
          component="dpEmbedHeader"
          dependencies={
            Array [
              "atlas",
            ]
          }
          interpolateBindings={Object {}}
          moduleName="dpHeaderWrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should render the main header 1`] = `
<section
  className="styled-header"
>
  <Header
    fullWidth={true}
    homeLink="/"
    styledComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-jDwBTQ",
          "isStatic": false,
          "rules": Array [
            "
  background-color: ",
            [Function],
            ";
  margin: 0 auto;
  width: 100%;
  max-width: ",
            [Function],
            ";
  box-shadow: 0 4px rgba(0, 0, 0, 0.04);
  box-sizing: content-box;
  position: fixed; /* Unfortunately no sticky because IE11 */
  left: 50%;
  transform: translateX(-50%);
  z-index: 2; /* Orders the header higher than the content */

  ",
            ".sc-jWBwVP",
            " {
    flex-grow: 1;
    margin-left: 15px;
  }

  ",
            [Function],
            "
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-jDwBTQ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    tall={false}
    title="Data en informatie"
  >
    <Connect(HeaderSearch) />
    <MenuContainer />
  </Header>
</section>
`;

exports[`Header should render the print header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <div
        className="qa-dashboard__print-header"
      >
        <AngularWrapper
          bindings={
            Object {
              "closeAction": Object {
                "meta": Object {
                  "tracking": true,
                },
                "type": "ui/HIDE_PRINT",
              },
            }
          }
          component="dpPrintHeader"
          dependencies={
            Array [
              "atlas",
            ]
          }
          interpolateBindings={Object {}}
          moduleName="dpHeaderWrapper"
        />
      </div>
    </div>
  </div>
</div>
`;
